# Richus

./: .gitignore  Dockerfile  README.md  Richus.excalidraw  cordo  craquito.py  dagster.yaml  deploy_hdv.sh  fuckyoupython.py  main_dag.py  pyproject.toml  pyrightconfig.json  r_hdv.sh  ressources  rune_prix  workspace.yaml
data/bronze/: brisage_coeff.csv  brisage_coeff_history.csv  hdv_prices.csv  item_ids_matching.csv  item_runes.csv  items.csv  no_id_hdv_prices.csv
data/silver/: hdv_brisage_items.csv  hdv_prices.csv
src/: init_local.py
src/dag/: daster.py
src/db/: db.py  insert_to_db.py
src/generators/: create_rune_mapping.py  generate_brisage_coeff.py  generate_hdv_prices.py  generate_item_ids_mapping.py  generate_runes.py  merge_all.py
src/generators/runOnce/: generate_item_ids_mapping.py  generate_runes.py
src/sql/: gold_price_brisage.sql  last_brisage_coeff_per_item.sql  rune_mapping.sql  runes_focus_with_prices.sql
src/transform/: rune_calculations.py  rune_price_brisage_together.py  rune_pricing.py
streamlit/: plot.py
streamlit/data/: bronze_brisage_coeff_history.csv  gold_item_rune_price.csv  gold_price_brisage.csv
